# CubePointModel

./: CMakeLists.txt  CubePointModel.cpp  CubePointModel.h  READMD.md  README.md  data.txt  main.cpp
